# etl

./: .gitignore  README.md  pyproject.toml  run_app.bat  run_gui.vbs  run_recipes_gui.vbs
.streamlit/: config.toml
scripts/: gui.py  recipes_gui.py  run_etl.py
src/etl/: clear_sheets.py  clearer.py  compare.py  config.py  end_to_beg.py  extract_sheets.py  locate_cols.py  main.py  merger.py  orchestrator.py  prev_unit_cost.py  reset_view.py  saver.py  special_characters.py  strip_all.py  utils.py  validators.py  writer.py
src/etl/preprocessors/: discount_by_category_by_department.py  discount_by_description_by_employee.py  discount_by_items.py  inventory_production.py  programming_summary_inventory.py  programming_summary_sales.py  programming_summary_sales_SP.py  purchase_master_report_for_all_branches.py  requisition_summary_IB.py  sales_by_items.py  sales_item_by_transaction.py  sales_item_wastage.py  sales_items_ingerdients.py  summary_of_sales_by_customer_by_item.py  wastage_report.py
src/etl/preprocessors/cloud/: __init__.py  discount_by_category_by_department.py  discount_by_description_by_employee.py  discount_by_invoice_with_details.py  discount_by_items.py  inventory_history.py  inventory_items_ingredients_qtp.py  inventory_production.py  programming_summary_inventory.py  programming_summary_sales.py  purchase_master_report_for_all_branches.py  requisition_summary.py  requisition_summary_IB.py  sales_by_category.py  sales_by_items.py  sales_item_by_transaction.py  sales_item_wastage.py  sales_items_ingredients.py  summary_of_sales_by_customer_by_item.py  (+1 more)
(+19 files in other folders)
