[project]

name = "pipeline"

version = "0.1.0"

readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "rich>=14.3.2",
    "xlwings>=0.33.20",
]

[tool.setuptools] 
package-dir = {"" = "src"} 

[tool.setuptools.packages.find] 
where = ["src"]
